Fixed form elements overlapping

--- a/less/base.less
+++ b/less/base.less
@@ -564,6 +564,7 @@ html.js input.throbbing {
 }
 .form-item {
   position: relative;
+  clear: both;
 }
 .form-checkboxes, .form-radios, .form-checkboxes .form-item, .form-radios .form-item {
   margin: 0.25em 0;
